// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPost Component renders the edit form when the 'Edit' button is clicked 1`] = `
<body>
  <div>
    <section
      class="BlogPost"
    >
      <h1>
        Lessons I Learned from Cooking
      </h1>
      <h2>
        By 
        <a
          class="BlogPost__author"
          href="/user/2"
        >
          FakeUser2
        </a>
      </h2>
      <p
        class="BlogPost__timestamp"
      >
        Last edited on 
        Dec 17 2020 07:37:16
      </p>
      <div
        class="EditPost"
      >
        <form>
          <textarea>
            Have patience, it can be fun to experiment and explore, having a hard time learning something may only be temporary, bringing an idea of yours to life by creating it from scratch without relying on any instructions can be fun and rewarding, the meals you cook don't have to be fancy or difficult to taste good.
          </textarea>
          <div
            class="EditPost__buttons"
          >
            <button
              type="submit"
            >
              Submit
            </button>
            <button
              type="submit"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </section>
  </div>
</body>
`;

exports[`BlogPost Component renders the post as expected, where the user IS the post's author 1`] = `
<body>
  <div>
    <section
      class="BlogPost"
    >
      <h1>
        Lessons I Learned from Cooking
      </h1>
      <h2>
        By 
        <a
          class="BlogPost__author"
          href="/user/2"
        >
          FakeUser2
        </a>
      </h2>
      <p
        class="BlogPost__timestamp"
      >
        Last edited on 
        Dec 17 2020 07:37:16
      </p>
      <p
        class="BlogPostPage__content"
      >
        Have patience, it can be fun to experiment and explore, having a hard time learning something may only be temporary, bringing an idea of yours to life by creating it from scratch without relying on any instructions can be fun and rewarding, the meals you cook don't have to be fancy or difficult to taste good.
      </p>
      <button
        type="button"
      >
        Edit
      </button>
    </section>
  </div>
</body>
`;

exports[`BlogPost Component renders the post as expected, where the user is NOT the post's author 1`] = `
<body>
  <div>
    <section
      class="BlogPost"
    >
      <h1>
        Lessons I Learned from Cooking
      </h1>
      <h2>
        By 
        <a
          class="BlogPost__author"
          href="/user/2"
        >
          FakeUser2
        </a>
      </h2>
      <p
        class="BlogPost__timestamp"
      >
        Last edited on 
        Dec 17 2020 07:37:16
      </p>
      <p
        class="BlogPostPage__content"
      >
        Have patience, it can be fun to experiment and explore, having a hard time learning something may only be temporary, bringing an idea of yours to life by creating it from scratch without relying on any instructions can be fun and rewarding, the meals you cook don't have to be fancy or difficult to taste good.
      </p>
    </section>
  </div>
</body>
`;

exports[`BlogPost Component un-renders the edit form after clicking 'Cancel' 1`] = `
<body>
  <div>
    <section
      class="BlogPost"
    >
      <h1>
        Lessons I Learned from Cooking
      </h1>
      <h2>
        By 
        <a
          class="BlogPost__author"
          href="/user/2"
        >
          FakeUser2
        </a>
      </h2>
      <p
        class="BlogPost__timestamp"
      >
        Last edited on 
        Dec 17 2020 07:37:16
      </p>
      <p
        class="BlogPostPage__content"
      >
        Have patience, it can be fun to experiment and explore, having a hard time learning something may only be temporary, bringing an idea of yours to life by creating it from scratch without relying on any instructions can be fun and rewarding, the meals you cook don't have to be fancy or difficult to taste good.
      </p>
      <button
        type="button"
      >
        Edit
      </button>
    </section>
  </div>
</body>
`;
